Fix spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -589,6 +589,7 @@ img {
 
 .form-icon-close {
   fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .close-modal:focus,
 .close-modal:hover {
@@ -611,6 +612,10 @@ img {
 .field-wrapper {
   margin-bottom: 16px;
 }
+.field-wrapper + .field-wrapper {
+  margin-top: 8px;
+}
+
 .field-wrapper-inner {
   position: relative;
 }
